# promptfall

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
promptfall/: __init__.py  game.py  main.py  multiplayer_client.py  promptfall.tcss  server.py  voting.py
